tests/NormalTests/paczka1/fuzzy1/86025681.err
Error in line 2: ImAFn S30 97,1
Error in line 15: 3Y6ae S30 98,5
Error in line 10: ImAFn S223 20,5
Error in line 20: lY4bsSN S816 79,3
Error in line 28: ImAFn S30 73,8
Error in line 32: ImAFn A131 54,5
Error in line 34: 3Y6ae S816 91,4
Error in line 33: ImAFn S223 59,1
